--- a/fqueryApp/templates/home/login.html
+++ b/fqueryApp/templates/home/login.html
@@ -2,5 +2,44 @@
     <head>
         Welcome to fQuery login page!
     </head>
+    <body>
 
+
+        <div id="fb-root"></div>
+        <div>
+          <fb:login-button
+            show-faces="false"
+            width="200"
+            max-rows="1"
+            autologoutlink="true">
+          </fb:login-button>
+        </div>
+        <script>
+          window.fbAsyncInit = function() {
+            FB.init({
+              appId      : '{{ FACEBOOK_APP_ID }}',
+              status     : true,
+              xfbml      : true
+            });
+          
+
+            FB.Event.subscribe('auth.authResponseChange', function(response) {
+                if (response.status === 'connected') {
+                  console.log('Logged in');
+                } else {
+                  FB.login();
+                }
+              });
+          };
+
+          (function(d, s, id){
+             var js, fjs = d.getElementsByTagName(s)[0];
+             if (d.getElementById(id)) {return;}
+             js = d.createElement(s); js.id = id;
+             js.src = "//connect.facebook.net/en_US/all.js";
+             fjs.parentNode.insertBefore(js, fjs);
+           }(document, 'script', 'facebook-jssdk'));
+        </script>
+    
+    </body>
 </html>
