--- a/fqueryApp/templates/home/home.html
+++ b/fqueryApp/templates/home/home.html
@@ -1,12 +1,17 @@
 <html>
     <head>
+        <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"> </script>
+        {% load static %}
+        <script src="{% static 'js/status.js' %}"> </script>
+        <script src="{% static 'js/photo.js' %}"> </script>
+        <script src="{% static 'js/friend.js' %}"> </script>
+        <script src="{% static 'js/comment.js' %}"> </script>
+        <script src="{% static 'js/utilities.js' %}"> </script>
+
         <title>
             Welcome to fQuery HOME page!    
         </title>
         Welcome to fQuery HOME page!
-        <script
-          src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js">
-        </script>
     </head>
     <body>
 
@@ -30,155 +35,6 @@
         <div id = "photo_list_div"></div>
 
         <script>
-            // Log to console
-            function log(msg) {
-                console.log(msg);
-            }
-
-            function get_friend_list(){
-                log('Fetching your friend list...');
-                FB.api('/me/friends', function(response){
-                    log("Total of " + response.data.length + " friends.");
-
-                    // Display friend list.
-                    var friend_list_li = document.createElement("ul");
-                    for (var i = 0; i < response.data.length; ++i){
-                        // log("")
-                        console.log("Processing " + response.data[i].name);
-                        var one_friend_element = document.createElement("li");
-                        one_friend_element.innerHTML =  response.data[i].id + " " +
-                                                        response.data[i].name;
-                        friend_list_li.appendChild(one_friend_element);
-                    }
-
-                    document.getElementById("friend_list_div").appendChild(friend_list_li)
-
-                });
-            }
-
-
-
-            // Get user statuses and display them.
-            function get_statuses () {
-                log('Fetching your statuses ...');
-                window.status_count = 0;
-                get_partial_status_list(100, 0);
-            }
-
-            function get_partial_status_list(limit, offset){
-                log("Fetching new page...");
-                query = 'me/statuses?limit=' + limit + '&offset=' + offset;
-                FB.api(query, function (response) {
-                    status_list = response.data;
-
-                    if (status_list.length > 0){
-                        window.status_count += status_list.length;
-                        var status_list_ul = document.createElement("ul");
-                        for (var i = 0; i < status_list.length; ++i){
-                            
-                            var status_li = document.createElement("li");
-                            status_li.innerHTML = status_list[i].message;
-                            if (status_list[i].comments){
-                                log("Making comment list...");
-                                status_li.appendChild(make_comment_list(status_list[i].comments));
-                            }
-                            else{
-                                log("No comment list...");
-                            }
-                            status_list_ul.appendChild(status_li);
-                        }
-
-                        document.getElementById("status_list_div").appendChild(status_list_ul)
-                        save_statuses(status_list);
-                        get_partial_status_list(limit, offset + limit)
-                    }
-                    else{
-                        document.getElementById("status_list_length").innerHTML = window.status_count + " statuses retrieved."
-                    }
-
-                })
-            }
-
-            function make_comment_list(commment_list_obj){
-
-                comment_list = commment_list_obj.data;
-
-                var comment_list_ul = document.createElement("ul");
-                for (var i = 0; i < comment_list.length; ++i){
-                    
-                    var comment_li = document.createElement("li");
-                    comment_li.innerHTML = comment_list[i].message;
-
-                    comment_list_ul.appendChild(comment_li);
-                }
-                return comment_list_ul;
-            }
-
-
-            function save_statuses (status_list) {
-                $.post(
-                    "{% url 'fqueryApp:save_statuses' %}",
-                    JSON.stringify(status_list),
-                    function(server_response) {
-                      log(server_response);
-                    }
-                  );
-            }
-
-
-
-
-            // Get user statuses and display them.
-            function get_pictures () {
-                log('Fetching your pictures ...');
-                window.photo_count = 0;
-                get_partial_picture_list(100, 0);
-            }
-
-            function get_partial_picture_list(limit, offset){
-                log("Fetching a new page of photos...");
-                query = 'me/photos?limit=' + limit + '&offset=' + offset;
-                FB.api(query, function (response) {
-                    photo_list = response.data;
-
-                    if (photo_list.length > 0){
-                        window.photo_count += photo_list.length;
-                        var photo_list_ul = document.createElement("ul");
-                        for (var i = 0; i < photo_list.length; ++i){
-                            
-                            var photo_li = document.createElement("li");
-                            photo_li.innerHTML = photo_list[i].name;
-
-                            // Attach photo
-                            var photo_img = document.createElement("img");
-                            photo_img.src = photo_list[i].source;
-                            photo_img.width = photo_list[i].width;
-                            photo_img.height = photo_list[i].height;
-
-                            photo_list_ul.appendChild(photo_img);
-
-                            // Attach comments
-                            if (photo_list[i].comments){
-                                log("Making comment list...");
-                                photo_li.appendChild(make_comment_list(photo_list[i].comments));
-                            }
-                            
-                            photo_list_ul.appendChild(photo_li);
-                        }
-
-                        document.getElementById("status_list_div").appendChild(photo_list_ul)
-                        // save_statuses(photo_list);
-                        get_partial_picture_list(limit, offset + limit)
-                    }
-                    else{
-                        document.getElementById("photo_list_length").innerHTML = window.photo_count + " photos retrieved."
-                    }
-
-                })
-            }
-
-
-
             window.fbAsyncInit = function() {
                 FB.init({
                   appId      : '{{ FACEBOOK_APP_ID }}',
