--- a/fqueryApp/templates/home/home.html
+++ b/fqueryApp/templates/home/home.html
@@ -2,11 +2,12 @@
     <head>
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"> </script>
         {% load static %}
+        <script src="{% static 'js/utilities.js' %}"> </script>
         <script src="{% static 'js/status.js' %}"> </script>
         <script src="{% static 'js/photo.js' %}"> </script>
         <script src="{% static 'js/friend.js' %}"> </script>
         <script src="{% static 'js/comment.js' %}"> </script>
-        <script src="{% static 'js/utilities.js' %}"> </script>
+        <script src="{% static 'js/link.js' %}"> </script>
 
         <title>
             Welcome to fQuery HOME page!    
@@ -75,6 +76,7 @@
               // get_friend_list();
               get_statuses();
               get_pictures();
+              get_links();
           }
         </script>
     
