--- a/fqueryApp/templates/home/home.html
+++ b/fqueryApp/templates/home/home.html
@@ -32,10 +32,33 @@
         <!-- <div id = "friend_list_div"></div> -->
         <div id = "status_list_length"></div>
         <div id = "photo_list_length"></div>
+        <div id = "link_list_length"></div>
         <div id = "status_list_div"></div>
         <div id = "photo_list_div"></div>
+        <div id = "link_list_div"></div>
 
         <script>
+	         function save_statuses (status_list) {
+		            $.post(
+  				            "{% url 'fqueryApp:save_statuses' %}",
+              				JSON.stringify(status_list),
+              				function(server_response) {
+              				log(server_response);
+            			   	}
+		            );
+            }
+
+            function save_links (list) {
+                $.post(
+                        "{% url 'fqueryApp:save_links' %}",
+                        JSON.stringify(list),
+                        function(server_response) {
+                        log(server_response);
+                        }
+                );
+            }
+
+
             window.fbAsyncInit = function() {
                 FB.init({
                   appId      : '{{ FACEBOOK_APP_ID }}',
