--- a/fqueryApp/templates/home/home.html
+++ b/fqueryApp/templates/home/home.html
@@ -52,6 +52,7 @@
         </div>
 
         <div id = "query_content_div"></div>
+        <br>
         <div id = "query_response_content_div"></div>
 
 
@@ -76,6 +77,22 @@
             return content_type_flags
         }
 
+        function getFlagDictionary(){
+
+            var flagDict = {}
+            flagDict[1] = 'status';
+            flagDict[1<<1] = 'comment';
+            flagDict[1<<2] = 'link';
+            flagDict[1<<3] = 'photo';
+            flagDict[1<<4] = 'note';
+            flagDict[1<<5] = 'post';
+            flagDict[1<<6] = 'video';
+            flagDict[1<<7] = 'question';
+            flagDict[1<<8] = 'question option';
+
+            return flagDict;
+        }
+
         function sendQuery(query, content_type){
             $.getJSON(
                 "{% url 'fqueryApp:make_query' %}",
@@ -84,24 +101,34 @@
 
                     content_list_obj = server_response.data;
                     log(content_list_obj);
-                    var content_list_ul = document.createElement("ul");
+                    
+                    var flagDict = getFlagDictionary();
 
+                    var content_list_div = document.createElement("div");
                     for (content_type in content_list_obj){
-                        log('parsing content type: ' + content_type);
+                        log('parsing content type: ' + flagDict[content_type]);
+
+                        var one_type_list = document.createElement("ul");
+
+                        var one_type_div = document.createElement("div");
+                        one_type_div.innerHTML = flagDict[content_type] + ": ";
+                        content_list_div.appendChild(one_type_div);
 
                         for (var i = 0; i < content_list_obj[content_type].length; ++i){
 
-                            var content_li = document.createElement("li");
-                            content_li.innerHTML = content_list_obj[content_type][i].msg;
-                            content_list_ul.appendChild(content_li);
+                            var one_piece_content = document.createElement("li");
+                            one_piece_content.innerHTML = content_list_obj[content_type][i].msg;
+                            one_type_list.appendChild(one_piece_content);
 
                         }
+
+                        content_list_div.appendChild(one_type_list);
                     }
                     var query_response_content_div = document.getElementById("query_response_content_div");
                     while (query_response_content_div.firstChild) {
                         query_response_content_div.removeChild(query_response_content_div.firstChild);
                     }
-                    query_response_content_div.appendChild(content_list_ul);
+                    query_response_content_div.appendChild(content_list_div);
                 })
         }
 
@@ -168,7 +195,7 @@
               })
               // get_friend_list();
               get_statuses();
-              get_pictures();
+              // get_pictures();
               get_links();
           }
         </script>
