--- a/fqueryApp/templates/home/home.html
+++ b/fqueryApp/templates/home/home.html
@@ -43,12 +43,12 @@
             <button type="button" OnClick="makeQuery()">GO</button><br>
             <label>within</label><br>
             <input type="checkbox" name="content_type_box" checked=yes, value=1>statuses<br>
-            <input type="checkbox" name="content_type_box" checked=yes, value=2>comments<br>
+            <input type="checkbox" name="content_type_box" checked=yes, value=32>posts<br>
+            <input type="checkbox" name="content_type_box" value=2>comments<br>
             <input type="checkbox" name="content_type_box" value=4>links<br>
-            <input type="checkbox" name="content_type_box" value=8>photos<br>
+<!--        <input type="checkbox" name="content_type_box" value=8>photos<br>
             <input type="checkbox" name="content_type_box" value=16>notes<br>
-            <input type="checkbox" name="content_type_box" value=32>posts<br>
-            <input type="checkbox" name="content_type_box" value=64>videos<br>
+            <input type="checkbox" name="content_type_box" value=64>videos<br> -->
 
         </div>
 
