Added read_stream request
This removes the restriction of gettings posts that are public

--- a/fqueryApp/templates/home/home.html
+++ b/fqueryApp/templates/home/home.html
@@ -24,7 +24,7 @@
             max-rows="1"
             autologoutlink="true"
             scope="user_status, friends_status
-                    user_photos">
+                    user_photos, read_stream">
           </fb:login-button>
         </div>
 
