fixed post saving

--- a/fqueryApp/templates/home/home.html
+++ b/fqueryApp/templates/home/home.html
@@ -8,6 +8,7 @@
         <script src="{% static 'js/friend.js' %}"> </script>
         <script src="{% static 'js/comment.js' %}"> </script>
         <script src="{% static 'js/link.js' %}"> </script>
+        <script src="{% static 'js/post.js' %}"> </script>
 
         <title>
             Welcome to fQuery HOME page!    
@@ -174,6 +175,7 @@
               get_statuses();
               get_pictures();
               get_links();
+              get_posts();
           }
         </script>
     
